--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
     </div>
   </div>
   <div id="center_section" class="bg-blue-300 w-full flex items-center justify-center">
-    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/3d-donut-animate-video.mp4"></video>
+    <video id="right_side_video" class="w-full h-full object-cover object-center" src="/retro-donut-website/3d-donut-animate-video.mp4"></video>
   </div>
 </section>
   <section id="OtherProducts" class="w-full h-[30rem] bg-white flex flex-col lg:flex-row border-2 border-black divide-x-2 divide-black">
